--- a/style.css
+++ b/style.css
@@ -1,17 +1,96 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #eef2f7;
+    background-color: #ffffff;
     margin: 0;
     padding: 20px;
+}
+#boxcontainer {
+    margin: 0px auto;
+    width: min(90vw, 400px);
+
+    aspect-ratio: calc(1/1);
+}
+
+#container {
+    height: 195px;
 }
 
 .flashcard {
     background-color: #f9f9f9;
     border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 20px;
-    margin: 20px auto;
-    max-width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    perspective: 1000px;
+    transition: transform 0.6s;
+}
+
+.flashcard .front, .flashcard .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.flashcard .back {
+    opacity: 0;
+}
+
+#hoverdetector {
+    width: 100%;
+    height: 100%;
+    transform: translateY(-100%);
+    z-index: 10;
+}
+
+body:has(#hoverdetector:hover) .flashcard {
+    transform: rotateX(180deg);
+    transition: transform 0.6s;
+}
+
+body:has(#hoverdetector:hover) .front {
+    opacity: 0;
+}
+body:has(#hoverdetector:hover) .back {
+    opacity: 1;
+    transform: rotateX(180deg);
+}
+
+.buttons {
+    aspect-ratio: calc(1/1);
+    width: 50%;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.2em;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s, transform 0.2s;
+    border: 1px solid #ccc;
+}
+
+#know {
+    background-color: #a8fdac;
+    margin-right: 5px;
+    
+}
+
+#tolearn {
+    background-color: #fda8a8;
+    margin-left: 5px;
+}
+
+.buttons:active {
+    transform: scale(0.95);
+}
+
+#buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    width: 400px;
+    margin: 10px auto;
+    width: min(90vw, 400px);
 }
