--- a/style.css
+++ b/style.css
@@ -3,16 +3,15 @@ body {
     background-color: #ffffff;
     margin: 0;
     padding: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #boxcontainer {
     margin: 0px auto;
     width: min(90vw, 400px);
-
-    aspect-ratio: calc(1/1);
 }
 
 #container {
-    height: 195px;
+    height: 300px;
 }
 
 .flashcard {
@@ -22,7 +21,7 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.409);
     perspective: 1000px;
     transition: transform 0.6s;
 }
@@ -33,6 +32,11 @@ body {
     height: 100%;
     opacity: 1;
     transition: all 0.3s;
+}
+
+.flashcard .front * {
+    position: relative;
+    top: 30%;
 }
 
 .flashcard .back {
@@ -46,27 +50,37 @@ body {
     z-index: 10;
 }
 
-body:has(#hoverdetector:hover) .flashcard {
+body:has(#hoverdetector:active) .flashcard {
     transform: rotateX(180deg);
     transition: transform 0.6s;
 }
 
-body:has(#hoverdetector:hover) .front {
+body:has(#hoverdetector:active) .front {
     opacity: 0;
 }
-body:has(#hoverdetector:hover) .back {
+body:has(#hoverdetector:active) .back {
     opacity: 1;
     transform: rotateX(180deg);
 }
 
-.buttons {
+#img {
     aspect-ratio: calc(1/1);
+    width: 200px;
+    margin-top: 20px;
+    border-radius: 8px;
+    object-fit: cover;
+    object-position: top;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.buttons {
+    aspect-ratio: 2/1;
     width: 50%;
     border: none;
     border-radius: 8px;
     font-size: 1.2em;
     cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.409);
     transition: background-color 0.3s, transform 0.2s;
     border: 1px solid #ccc;
 }
